[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Enemies/Ant/Ant-1-.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Ant/RedAnt.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitboxes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 2.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.87451, 0.243137, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="CircleShape2D" id=6]
radius = 153.003

[sub_resource type="Animation" id=7]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[node name="RedAnt" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -8, -2 )
shape = SubResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -7.0
margin_top = -15.0
margin_right = 7.0
margin_bottom = -12.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 70.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 0.827451, 0.764706, 0.054902, 0.196078 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 7 )
anims/move = SubResource( 8 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]
